@@ -298,6 +298,9 @@ OpenIncludeAction.tooltip=Open the Selected Include in the Editor
 OpenIncludeAction.description=Open the selected include in the editor
 OpenIncludeAction.dialog.title=Open Include
 OpenIncludeAction.dialog.message=Select the file to open
+OpenIncludeAction.error = No Includes Found
+OpenIncludeAction.error.description = No include files were found that matched that name.
+
 
 # ------- SearchDialogAction ---------------
 SearchDialogAction.label=C/C++ Search...
@@ -323,3 +326,8 @@ CreateFolderAction.text = F&older
 
 # ------- Drag and Drop Message Text -----------
 CViewDragNDrop.txt = already exists. Would you like to overwrite it?
+
+# ------- EditorUtility Open Closed Project Text -----------
+EditorUtility.closedproject = Project is closed
+Editorutility.closedproject.description = The project {0} containing that declaration is closed.
+
